--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biz bilan bog'lanish</title>
+    <link rel="icon" href="./logo.png">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
