--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+<style>
+    @media screen and (max-width: 430px) {
+       .container {
+            flex-direction: column;
+        }
+        .form {
+            flex-direction: column;
+        }
+    }
+    @media screen and (max-width: 375px) {
+       .container {
+            flex-direction: column;
+        }
+        .form {
+            flex-direction: column;
+        }
+    }
+    @media screen and (max-width: 320px) {
+       .container {
+            flex-direction: column;
+        }
+        .form {
+            flex-direction: column;
+        }
+        .mx-auto{
+            width: 300px;
+        }
+    }
+</style>
 
 <body>
     <nav>
