--- a/index.html
+++ b/index.html
@@ -9,7 +9,40 @@
     <link rel="icon" href="./logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
+<style>
+    @media screen and (max-width: 430px) {
+        .container {
+            flex-direction: column;
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        .container {
+            flex-direction: column;
+
+        }
+
+        .hero {
+            padding: 100px 10px;
+        }
+
+        .logo img {
+            width: 80px;
+        }
+
+        .ul li {
+            flex-direction: column;
+        }
+    }
+
+    @media screen and (max-width: 375px) {
+        .container {
+            flex-direction: column;
+        }
+    }
+</style>
 
 <body>
     <header>
@@ -48,7 +81,7 @@
         <p>O‘z avtomobilingizni mukammal holatda ushlab turish uchun kerak bo‘lgan barcha ehtiyot qismlar bir joyda.
             Sifat kafolati va tez yetkazib berish!</p>
     </div>
-    
+
 
 
     <script>
@@ -56,7 +89,9 @@
             window.location.href = 'log.html';
         }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="theme.js"></script>
 
 </body>
