--- a/log.html
+++ b/log.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
 </head>
+<style>
+    @media screen and (max-width: 430px) {
+        .container {
+            flex-direction: column;
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        .container {
+            flex-direction: column;
+
+        }
+    }
+
+    @media  screen and (max-width: 375px) {
+        .container {
+            flex-direction: column;
+        }
+        
+    }
+</style>
 <body>
     <nav>
         <div class="container2">
